[gd_scene load_steps=17 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/spritesheet_player_WIP-Sheet.png" type="Texture" id=2]
[ext_resource path="res://UI/DragLine_gfx.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://items/Sword.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/Hand.gd" type="Script" id=6]
[ext_resource path="res://debug.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.53891, 10.8011 )

[sub_resource type="CircleShape2D" id=2]
radius = 22.4274

[sub_resource type="Animation" id=3]
resource_name = "dash"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=4]
resource_name = "dash_in"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 38 ]
}

[sub_resource type="Animation" id=7]
resource_name = "jump_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37, 38 ]
}

[sub_resource type="Animation" id=8]
resource_name = "run"
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=9]
resource_name = "wall_slide"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[node name="Player" type="KinematicBody2D"]
input_pickable = true
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.53123, -14.6134 )
texture = ExtResource( 2 )
hframes = 39
frame = 26

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.53123, -1.94888 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -71.4762 )
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.3
drag_margin_right = 0.3
drag_margin_bottom = 0.3

[node name="Ground_ray" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 9 )

[node name="Wall_left_ray" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, -14 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="Wall_right_ray" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, -14 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 7 )

[node name="DragLine_gfx" parent="." instance=ExtResource( 3 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="StateMachine"]

[node name="RayCast2D" type="RayCast2D" parent="."]
visible = false
position = Vector2( 8.48528, 4.5962 )
enabled = true

[node name="Hand" type="Node2D" parent="."]
position = Vector2( 8.48528, 4.5962 )
script = ExtResource( 6 )

[node name="Pivot" type="Node2D" parent="Hand"]
position = Vector2( -7, -2 )

[node name="Sword" parent="Hand/Pivot" instance=ExtResource( 5 )]
position = Vector2( 8.56878, 2.38419e-07 )
rotation = -1.0472

[node name="Hitbox" type="Area2D" parent="Hand/Pivot"]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hand/Pivot/Hitbox"]
position = Vector2( 14.7495, -4.54508 )
shape = SubResource( 2 )

[node name="Debug" parent="." instance=ExtResource( 7 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dash = SubResource( 3 )
anims/dash_in = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jump = SubResource( 6 )
anims/jump_in = SubResource( 7 )
anims/run = SubResource( 8 )
anims/wall_slide = SubResource( 9 )
[connection signal="timeout" from="StateMachine/Timer" to="StateMachine" method="_on_Timer_timeout"]
